# ratingmodels

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: changelog.md  index.md  theory.md
docs/api/: base_loading.md  buildup.md  credibility.md  decomposition.md  indication.md  rates.md  relativity.md  renewal.md  trend.md
examples/: contract_loss_ratios.py  credibility_smoothing.py  freqsev_to_plan.py  indication_assembly.py  model_to_plan.py  model_validation.py  pricing_scenarios.py  quickstart.py  vectorized_book.py
src/ratingmodels/: __init__.py  _utils.py  base_rate.py  blend.py  buildup.py  constraints.py  credibility.py  datasets.py  decomposition.py  dislocation.py  evaluation.py  experience_rate.py  freqsev.py  indication.py  loading.py  manual_rate.py  onlevel.py  plan.py  pooling.py  relativity.py  renewal.py  scenarios.py  splits.py  trend.py
tests/: test_actuarialpy_pin.py  test_base_rate_experience.py  test_buildup_renewal.py  test_credibility_relativities.py  test_diagnostics.py  test_dislocation.py  test_evaluation.py  test_experience_exhibit.py  test_freqsev.py  test_freqsev_interactions.py  test_from_experience.py  test_glm.py  test_glm_and_eval.py  test_interactions.py  test_interval_coverage.py  test_loading.py  test_onlevel.py  test_plan.py  test_pooling.py  test_prediction_safety.py  test_pricing_algebra.py  test_ratingmodels.py  test_scenarios.py  test_splits.py  test_statsmodels_crosscheck.py  test_validation_tables.py  test_vectorized.py  test_worked_example_book.py  test_worked_example_contract.py  test_worked_example_experience.py  test_worked_example_indication.py  test_worked_example_projection_indication.py
