[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ratingmodels"
version = "0.7.1"
description = "Rating and pricing models: manual and experience rate build-up, credibility blending, rate indications and decomposition, GLM relativities and evaluation, and pricing scenarios."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Michael Bryant" }]
keywords = [
    "actuarial",
    "insurance",
    "pricing",
    "rating",
    "rate-indication",
    "credibility",
    "glm",
    "health-insurance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.22",
    "pandas>=1.4",
    "actuarialpy~=0.44.0",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "experiencestudies>=0.3"]

[project.urls]
Homepage = "https://github.com/OpenActuarial/ratingmodels"
Documentation = "https://openactuarial.org/ratingmodels.html"
Repository = "https://github.com/OpenActuarial/ratingmodels"
Issues = "https://github.com/OpenActuarial/ratingmodels/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ratingmodels"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
